--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,17 @@ img{
         width: 620px;
     }
 
+    .s2_box_li{
+        flex-direction: column;
+    }
+    .in_text_{
+        margin-bottom: 30px;
+    }
+
+    .next_li{
+        margin-left: 34px;
+    }
+
     .main_ul{
         margin-right: 30px;
     }
@@ -222,17 +233,16 @@ img{
     color: black;
 }
 
-.box_ul{
-   
-}
-
 .box{
+    transition: 1s;
     position: relative;
     display: inline-block;
     justify-content: center;
     align-items: center;
     width: 280px;
     height: 220px;
+    box-shadow: 0px 8px 8px 0px #0000001A;
+    border-radius: 5px;
     margin-right: 30px;
     margin-bottom: 18px;
     margin-top: 24px;
@@ -284,4 +294,139 @@ img{
     width: 129.22px;
     height: 90px;
     margin-top: 24px;
+}
+
+.main_ul_2{
+    display: flex;
+    justify-content: center;
+}
+
+.main_a_1{
+    color: white;
+    font-weight: 700;
+    line-height: 24px;
+    background-color: #00BAFC;
+    padding: 8px 16px;
+    border-radius: 5px;
+    margin-right: 16px;
+    transition: .5s;
+}
+
+.main_a_2{
+    line-height: 24px;
+    font-weight: 400;
+    color: #00BAFC;
+    border-bottom: 1px solid #00BAFC ;
+    margin-top: 6px;
+    transition: all .5s;
+}
+
+.main_a_2:hover{
+    color: black;
+    border-bottom: none;
+}
+
+.main_a_1:hover{
+    color: gold;
+    background-color: black;
+}
+
+.box:hover{
+    background-color: aqua;
+}
+
+.section_2 .container{
+    text-align: center;
+}
+
+.s2_text_1{
+    color: black;
+    font-weight: bold;
+    line-height: 31px;
+    font-size: 24px;
+    margin-bottom: 16px;
+    margin-top: 112px;
+}
+
+.s2_text_2{
+    font-size: normal;
+    line-height: 24px;
+    font-weight: 400;
+    color: black; 
+    margin-bottom: 24px;  
+}
+
+
+
+.s2_box_li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.in_li{
+    text-align: start;
+}
+
+.in_text{
+    margin-bottom: 8px;
+    line-height: 26px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.img_5{
+    width: 260px;
+    height: 238px;
+    margin-right: 32px;
+    margin-bottom: 60px;
+}
+
+
+.img_6{
+    width: 260px;
+    height: 194.59px;
+}
+
+.in_4{
+    margin-right: 112px;
+}
+
+.img_7{
+    margin-top: 50px;
+    width: 260px;
+    height: 228.9px;
+    margin-right: 32px;
+    margin-bottom: 60px;
+}
+
+.img_8{
+    width: 260px;
+    height: 141.12px;
+}
+
+.img_9{
+    margin-top: 50px;
+    width: 260px;
+    height: 192.2px;
+    margin-right: 32px;
+}
+
+.last_a{
+    padding: 8px 16px;
+    background-color: #00BAFC;
+    border-radius: 5px;
+    color: white;
+    transition: .5s;
+    margin-top: 58px;
+    margin-bottom:100px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.last_a:hover{
+    color: gold;
+    background-color: black;
 }
